--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url(styles/colors.css);
 @import url(styles/layouts.css);
 @import url(styles/typography.css);
+@import url(styles/charts.css);
 
 body {
   margin: 0;
